--- a/styles/header.css
+++ b/styles/header.css
@@ -12,7 +12,7 @@
 }
 
 .container__botao:checked~.container__rotulo {
-    background: var(--azul-degrade);
+    background: var(--roxo-degrade);
 }
 
 .cabeçalho {
@@ -51,12 +51,12 @@
 }
 
 .lista-menu__titulo {
-    color: var(--laranja);
+    color: var(--violeta);
     font-weight: 700;
 }
 
 .lista-menu__link {
-    background: var(--azul-degrade);
+    background: var(--roxo-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -128,7 +128,7 @@
     }
 
     .opções__botão:checked~.opções__rotulo>.opções__item {
-        background: var(--azul-degrade);
+        background: var(--roxo-degrade);
         color: var(--branco);
     }
 
@@ -137,7 +137,7 @@
     }
 
     .lista-menu__item:hover {
-        background: var(--azul-degrade);
+        background: var(--roxo-degrade);
     }
 
     .lista-menu__item:hover>.lista-menu__link {
