--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
-    --violeta: 9400d3;
+    --violeta: #000000;
     --roxo-degrade: linear-gradient(97.54deg, ff6347 35.49%, e2725b 165.37%);
     --fonte-principal: "Poppins";
     --rosa: ec8a80;
