--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -1,7 +1,7 @@
 .carrossel__titulo {
     color: var(--violeta);
     background-color: var(--branco);
-    text-align: center;
+    text-align: left;
     text-transform: uppercase;
     font-size: 18px;
     font-weight: 700;
@@ -12,10 +12,6 @@
     width: 100%;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
-    display: none;
-}
 
 .swiper-pagination {
     position: initial;
