--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -1,7 +1,7 @@
 .carrossel__titulo {
     color: var(--violeta);
     background-color: var(--branco);
-    text-align: left 30;
+    text-align: margin-left: 0.6em;
     text-transform: uppercase;
     font-size: 18px;
     font-weight: 700;
